# novel-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GUIDE.md  README.md  WRITE_FLOW.md  backfill_memory.py  pyproject.toml
app_data/: genres.json
novel_agent/: __init__.py  cli.py  config.py  engine.py  project.py  reporting.py  storage.py
novel_agent/bible/: __init__.py  models.py
novel_agent/editor/: __init__.py  checker.py  models.py
novel_agent/generate/: __init__.py  chapter_writer.py  genre_store.py  genre_templates.py  ideation.py  outline_models.py  outline_planner.py  pacing.py
novel_agent/llm/: __init__.py  gateway.py  json_utils.py
novel_agent/memory/: __init__.py  embedder.py  extractor.py  mid_term.py  promote.py  retrieval.py  short_term.py  state_models.py  vector.py
novel_agent/server/: __init__.py  app.py  config_store.py  tasks.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: api.ts  main.tsx  styles.css  theme.ts  useTaskStream.ts
web/src/components/: BatchModal.tsx  ConfirmModal.tsx  DeleteBookModal.tsx  ExtendOutlineModal.tsx  ProgressDrawer.tsx  ThemeSwitcher.tsx  WriteChapterModal.tsx
web/src/pages/: BookList.tsx  GenreTemplates.tsx  Settings.tsx  Workspace.tsx
web/src/pages/tabs/: BibleTab.tsx  ChaptersTab.tsx  CharactersTab.tsx  NotesTab.tsx  OutlineTab.tsx  OverviewTab.tsx  ReviewsTab.tsx  StyleTab.tsx
